<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.5.6</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>com.grzegorzkartasiewicz</groupId>
	<artifactId>Facebook-Clone</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Facebook-Clone</name>
	<description>Facebook Clone in Spring</description>
	<packaging>pom</packaging>

	<properties>
		<java.version>17</java.version>
	</properties>

	<modules>
		<module>bootstrap</module>
    <module>identity-access-management</module>
    <module>content-management</module>
    <module>social-graph</module>
    <module>messenger</module>
    <module>notifications</module>
    <module>legacy</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.grzegorzkartasiewicz</groupId>
				<artifactId>domain</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.grzegorzkartasiewicz</groupId>
				<artifactId>app</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.grzegorzkartasiewicz</groupId>
				<artifactId>adapters</artifactId>
				<version>${project.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

</project>
